[package]
name = "reaction-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
config = "0.13.3"
futures = "0.3.28"
json-db = { git = "https://github.com/mendess/discord-bot-utils" }
pubsub = { git = "https://github.com/mendess/discord-bot-utils", features = ["serenity_cache"] }
serde = { version = "1.0.163", features = ["derive"] }
serenity = { version = "0.12", default-features = false, features = ["cache"] }
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
